--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -4,8 +4,8 @@
     "module": "NodeNext",
     "moduleResolution": "nodenext",
     "rootDir": "./src",
-    "typeRoots": ["./types", "./node_modules/@types"],
     "outDir": "./dist",
+    // "typeRoots": ["./types", "./node_modules/@types"],
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
